# dlopen_test

./: CMakeLists.txt  initializer.hpp  main.cpp  object.cpp  object.hpp  plugin.cpp  plugin.hpp  plugin_a.cpp  plugin_a.hpp  registry.cpp  registry.hpp  value.hpp
.github/workflows/: test.yaml
